--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -7,13 +7,14 @@ on:
   schedule:
     # Every day at midnight (UTC).
     - cron: '0 0 * * *'
+  workflow_dispatch:
 
 defaults:
   run:
     shell: bash
 
 env:
-  DOCKER_REPO: lightninglabs
+  DOCKER_REPO: carlakirkcohen
   DOCKER_IMAGE: lnd
 
 jobs:
@@ -32,25 +33,13 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_API_KEY }}
 
-      - name: Set env
-        run: |
-          echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-          echo "IMAGE_TAG=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-      
-      - name: Set daily tag
-        if: github.event.schedule == '0 0 * * *'
-        run: |
-          echo "RELEASE_VERSION=master" >> $GITHUB_ENV
-          echo "IMAGE_TAG=daily-testing-$(date -u +%Y%m%d),${DOCKER_REPO}/${DOCKER_IMAGE}:daily-testing-only" >> $GITHUB_ENV
-
       - name: Build and push
         id: docker_build
         uses: lightninglabs/gh-actions/build-push-action@2021.01.25.00
         with:
           push: true
           platforms: linux/amd64,linux/arm64
-          tags: "${{ env.DOCKER_REPO }}/${{ env.DOCKER_IMAGE }}:${{ env.IMAGE_TAG }}"
-          build-args: checkout=${{ env.RELEASE_VERSION }}
+          tags: "${{ env.DOCKER_REPO }}/${{ env.DOCKER_IMAGE }}:attackathon"
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
